--- a/styles/index.css
+++ b/styles/index.css
@@ -191,7 +191,7 @@ html {
 
 .editor-content h2 {
     margin-top: 2rem;
-    margin-bottom:1rem;
+    margin-bottom: 1rem;
     font-weight: 600;
     color: var(--primary-color);
     font-size: 22px;
@@ -210,7 +210,7 @@ html {
 
 .editor-content h3 {
     margin-top: 2rem;
-    margin-bottom:.5rem;
+    margin-bottom: 0.5rem;
     font-weight: 500;
     color: var(--primary-color);
     font-size: 20px;
@@ -233,7 +233,8 @@ html {
 .editor-content a:hover {
     text-decoration: underline;
 }
-.editor-content ul, .editor-content ol {
+.editor-content ul,
+.editor-content ol {
     list-style: disc;
     padding-left: 40px;
 }
@@ -329,7 +330,16 @@ html {
     margin-top: 0.5rem;
 }
 
+.admission-modal {
+    display: none;
+}
 
-select option:checked {
-    color: #ff0000; /* Change this to your selected text color */
-  }
+.admission-modal.active {
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1050;
+}
