--- a/styles/index.css
+++ b/styles/index.css
@@ -343,3 +343,19 @@ html {
     bottom: 0;
     z-index: 1050;
 }
+
+
+.overview__wrapper.limited {
+    height: 500px;
+    overflow: hidden;
+  }
+  
+  
+  .overview__wrapper.limited .fader {
+    bottom: 0;
+    height: 8rem;
+    left: 0;
+    right: 0;
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  }
