--- a/styles/index.css
+++ b/styles/index.css
@@ -149,6 +149,9 @@ html {
 .custom-swiper-dots .swiper-pagination {
     bottom: -40px !important;
 }
+.custom-swiper-dots.custom .swiper-pagination {
+    bottom: -50px !important;
+}
 
 @media (min-width: 768px) {
     .hide-custom-swiper-dots .swiper-pagination {
@@ -344,18 +347,32 @@ html {
     z-index: 1050;
 }
 
-
 .overview__wrapper.limited {
     height: 500px;
     overflow: hidden;
-  }
-  
-  
-  .overview__wrapper.limited .fader {
+}
+
+.overview__wrapper.limited .fader {
     bottom: 0;
     height: 8rem;
     left: 0;
     right: 0;
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-  }
+    background: -webkit-linear-gradient(
+        top,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+    background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+}
+
+.custom .swiper-wrapper .swiper-slide {
+    height: unset;
+}
+
+.custom .swiper-wrapper {
+    align-items: stretch;
+}
