--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .container {
-        @apply mx-auto w-full px-3 sm:max-w-[540px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1140px] 2xl:max-w-[1320px];
+        @apply mx-auto w-full px-3 max-w-[100%] sm:max-w-[540px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1140px] 2xl:max-w-[1320px];
     }
 
     .flex-center {
